- Fixed sidebar menu covering other menus and modals

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -568,12 +568,12 @@ td.grid-select-field {
 
   .navbar-toggle {
     float: left;
-    font-size: 1.5em;
-    line-height: @navbar-top-height;
     width: @navbarside-width;
     height: @navbar-top-height;
     padding: 0 28px;
     margin: 0;
+    font-size: 1.5em;
+    line-height: @navbar-top-height;
     color: #fff;
     cursor: pointer;
 
@@ -877,8 +877,8 @@ td.grid-select-field {
     left: 0;
     z-index: -1;
     width: inherit;
-    content: "";
     width: @navbarside-width;
+    content: "";
     background-color: @navbarside-background-color;
     background-color: var(--navbarside-background-color);
   }
@@ -887,15 +887,15 @@ td.grid-select-field {
 .navbar-static-side {
   position: fixed;
   top: 0;
-  left: 0;
   bottom: 0;
-  z-index: @zindex-navbar-fixed + 50;
+  left: 0;
+  z-index: @zindex-navbar-fixed;
   display: none;
   width: @navbarside-width;
   height: 100%;
-  color: @navbarside-color;
   overflow-x: hidden;
   overflow-y: auto;
+  color: @navbarside-color;
   background-color: @navbarside-background-color;
   background-color: var(--navbarside-background-color);
 
